infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: rabbitmq
  annotations:
    xlscsde.nhs.uk/dns-record: rabbitmq${environment_dns_suffix}
spec:
  ingressClassName: nginx
  rules:
  - host: ${environment_dns_prefix}rabbitmq${environment_dns_suffix}.${private_dnz_zone}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lsc-rmq
            port:
              number: 15672
